--- a/Xamarin.RangeSlider.Forms.Samples/Xamarin.RangeSlider.Forms.Samples/MainPage.xaml
+++ b/Xamarin.RangeSlider.Forms.Samples/Xamarin.RangeSlider.Forms.Samples/MainPage.xaml
@@ -40,7 +40,7 @@
 				<ColumnDefinition Width="50" />
 			</Grid.ColumnDefinitions>
 			<Label Grid.Column="0" BindingContext="{x:Reference Name=RangeSlider}" Text="{Binding LowerValue, StringFormat='{0:F2}'}" VerticalOptions="Center" />
-			<forms:RangeSlider Grid.Column="1" x:Name="RangeSlider" MinimumValue="1" MaximumValue="101" LowerValue="1" UpperValue="100" StepValue="10" StepValueContinuously="True" VerticalOptions="Center" TextSize="15" TextColor="Purple" />
+			<forms:RangeSlider Grid.Column="1" x:Name="RangeSlider" MinimumValue="1" MaximumValue="101" LowerValue="1" UpperValue="100" StepValue="10" StepValueContinuously="True" VerticalOptions="Center" TextSize="15" TextColor="Purple" ActiveColor="Red" />
 
 			<Label Grid.Column="2" BindingContext="{x:Reference Name=RangeSlider}" Text="{Binding UpperValue, StringFormat='{0:F2}'}" VerticalOptions="Center" />
 			<Switch Grid.Row="1" BindingContext="{x:Reference Name=RangeSlider}" IsToggled="{Binding MinThumbHidden, Mode=TwoWay}" VerticalOptions="Center" />
